# file-dating

./: .gitignore  LICENSE  filedating.py  photos.py  setup.cfg
docs/: README.md
