[metadata]
name = file-dating-aarongae
version = 1.0.0
author = Aaron Gätje
description = A simple command line tool for automatically renaming image, video and text files.
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/aarongae/file-dating
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6